--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,15 @@
 shallow_clone: true
 
 os:
-  - Visual Studio 2015
+  - Visual Studio 2017
 
 environment:
   matrix:
     - TOOLSET: vs2017
+
+platform:
+    - x64
+    - Win32
 
 configuration:
     - Debug
