--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - sourceline: 'ppa:beineri/opt-qt-5-13.2-bionic'
+    - sourceline: 'ppa:beineri/opt-qt-5.13.2-bionic'
     packages:
     - gcc-5
     - g++-5
